--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "^14.0.4",
     "openai": "^4.93.0",
     "react": "^18.2.0",
